--- a/thesis.bib
+++ b/thesis.bib
@@ -2726,3 +2726,91 @@ PML and several other proteins localizing in PML-nuclear bodies (PML-NB) contai
 	pages = {21--26},
 	file = {ScienceDirect Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/8DJDS4PQ/Chakravarti et al. - 2013 - Distilling Pathophysiology from Complex Disease Ge.pdf:application/pdf;ScienceDirect Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/H6KXH23V/S0092867413010921.html:text/html}
 }
+
+@article{stagljar_analysis_2002,
+	title = {Analysis of membrane protein interactions using yeast-based technologies},
+	volume = {27},
+	issn = {0968-0004},
+	url = {http://www.sciencedirect.com/science/article/pii/S0968000402021977},
+	doi = {10.1016/S0968-0004(02)02197-7},
+	abstract = {Proteins associated with membranes total approximately a third of all proteins in a typical eukaryotic cell. However, the analysis of interactions between membrane proteins is difficult because of the hydrophobic nature of these proteins, and conventional biochemical and genetic assays are often of limited use. We summarize here recent yeast-based interaction technologies that can be applied to membrane proteins.},
+	number = {11},
+	urldate = {2017-04-04},
+	journal = {Trends in Biochemical Sciences},
+	author = {Stagljar, Igor and Fields, Stanley},
+	month = nov,
+	year = {2002},
+	keywords = {G protein, membrane protein, Ras, Saccharomyces cerevisiae, ubiquitin, yeast},
+	pages = {559--563},
+	file = {ScienceDirect Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/8XITFPQB/Stagljar and Fields - 2002 - Analysis of membrane protein interactions using ye.pdf:application/pdf;ScienceDirect Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/N3F6P5K9/S0968000402021977.html:text/html}
+}
+
+@article{iyer_utilizing_2005,
+	title = {Utilizing the {Split}-{Ubiquitin} {Membrane} {Yeast} {Two}-{Hybrid} {System} to {Identify} {Protein}-{Protein} {Interactions} of {Integral} {Membrane} {Proteins}},
+	volume = {2005},
+	copyright = {American Association for the Advancement of Science},
+	issn = {1525-8882},
+	url = {http://stke.sciencemag.org.myaccess.library.utoronto.ca/content/2005/275/pl3},
+	doi = {10.1126/stke.2752005pl3},
+	abstract = {Various modifications of the conventional yeast two-hybrid system have played an essential role in confirming or detecting protein-protein interactions among nuclear and cytoplasmic proteins. These approaches have permitted the identification of novel interaction partners, as well as provided hints as to their function. However, membrane proteins, such as receptor tyrosine kinases, G protein–coupled receptors, membrane-bound phosphatases, and transporters, which represent important classes of signaling molecules, are difficult to study using classical protein interaction assays because of their hydrophobic nature. Here, we describe a genetic system that allows the identification of integral membrane-interacting proteins. This so-called "split-ubiquitin membrane-based yeast two-hybrid assay" involves fusing the halves of ubiquitin to two interacting proteins, at least one of which is membrane bound. Upon interaction of these two proteins, the halves of ubiquitin are brought together, and the transcription factor that is fused to a membrane protein of interest is cleaved and released. The free transcription factor then enters the nucleus and activates transcription of reporter genes. We also describe how this technology is used to screen complementary DNA libraries to identify novel binding partners of a membrane protein of interest.},
+	language = {en},
+	number = {275},
+	urldate = {2017-04-04},
+	journal = {Sci. STKE},
+	author = {Iyer, Kavitha and Bürkle, Lukas and Auerbach, Daniel and Thaminy, Safia and Dinkel, Martin and Engels, Kim and Stagljar, Igor},
+	month = mar,
+	year = {2005},
+	pmid = {15770033},
+	pages = {pl3--pl3},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/7XGND95G/Iyer et al. - 2005 - Utilizing the Split-Ubiquitin Membrane Yeast Two-H.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/JFT3BPVI/pl3.html:text/html}
+}
+
+@article{stagljar_genetic_1998,
+	title = {A genetic system based on split-ubiquitin for the analysis of interactions between membrane proteins in vivo},
+	volume = {95},
+	issn = {0027-8424, 1091-6490},
+	url = {http://www.pnas.org.myaccess.library.utoronto.ca/content/95/9/5187},
+	abstract = {A detection system for interactions between membrane proteins in vivo is described. The system is based on split-ubiquitin [Johnsson, N. \& Varshavsky, A. (1994) Proc. Natl. Acad. Sci. USA 91, 10340–10344]. Interaction between two membrane proteins is detected by proteolytic cleavage of a protein fusion. The cleavage releases a transcription factor, which activates reporter genes in the nucleus. As a result, interaction between membrane proteins can be analyzed by the means of a colorimetric assay. We use membrane proteins of the endoplasmic reticulum as a model system. Wbp1p and Ost1p are both subunits of the oligosaccharyl transferase membrane protein complex. The Alg5 protein also localizes to the membrane of the endoplasmic reticulum, but does not interact with the oligosaccharyltransferase. Specific interactions are detected between Wbp1p and Ost1p, but not between Wbp1p and Alg5p. The new system might be useful as a genetic and biochemical tool for the analysis of interactions between membrane proteins in vivo.},
+	language = {en},
+	number = {9},
+	urldate = {2017-04-04},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Stagljar, Igor and Korostensky, Chantal and Johnsson, Nils and Heesen, Stephan te},
+	month = apr,
+	year = {1998},
+	pmid = {9560251},
+	pages = {5187--5192},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/RMURS4ID/Stagljar et al. - 1998 - A genetic system based on split-ubiquitin for the .pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/8M5AVKXM/5187.html:text/html}
+}
+
+@article{petschnigg_mammalian-membrane_2014,
+	title = {The mammalian-membrane two-hybrid assay ({MaMTH}) for probing membrane-protein interactions in human cells},
+	volume = {11},
+	copyright = {© 2014 Nature Publishing Group, a division of Macmillan Publishers Limited. All Rights Reserved.},
+	issn = {1548-7091},
+	url = {http://www.nature.com/nmeth/journal/v11/n5/full/nmeth.2895.html},
+	doi = {10.1038/nmeth.2895},
+	abstract = {Cell signaling, one of key processes in both normal cellular function and disease, is coordinated by numerous interactions between membrane proteins that change in response to stimuli. We present a split ubiquitin–based method for detection of integral membrane protein-protein interactions (PPIs) in human cells, termed mammalian-membrane two-hybrid assay (MaMTH). We show that this technology detects stimulus (hormone or agonist)-dependent and phosphorylation-dependent PPIs. MaMTH can detect changes in PPIs conferred by mutations such as those in oncogenic ErbB receptor variants or by treatment with drugs such as the tyrosine kinase inhibitor erlotinib. Using MaMTH as a screening assay, we identified CRKII as an interactor of oncogenic EGFR(L858R) and showed that CRKII promotes persistent activation of aberrant signaling in non–small cell lung cancer cells. MaMTH is a powerful tool for investigating the dynamic interactomes of human integral membrane proteins.},
+	language = {en},
+	number = {5},
+	urldate = {2017-04-04},
+	journal = {Nature Methods},
+	author = {Petschnigg, Julia and Groisman, Bella and Kotlyar, Max and Taipale, Mikko and Zheng, Yong and Kurat, Christoph F. and Sayad, Azin and Sierra, J. Rafael and Usaj, Mojca Mattiazzi and Snider, Jamie and Nachman, Alex and Krykbaeva, Irina and Tsao, Ming-Sound and Moffat, Jason and Pawson, Tony and Lindquist, Susan and Jurisica, Igor and Stagljar, Igor},
+	month = may,
+	year = {2014},
+	keywords = {Cancer models, High-throughput screening, Protein–protein interaction networks, Systems Biology},
+	pages = {585--592},
+	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/U37XKR4Z/nmeth.2895.html:text/html}
+}
+
+@incollection{bartel_analyzing_1995,
+	title = {Analyzing protein-protein interactions using two-hybrid system},
+	volume = {254},
+	url = {http://www.sciencedirect.com/science/article/pii/0076687995540180},
+	urldate = {2017-04-04},
+	booktitle = {Methods in enzymology},
+	author = {Bartel, Paul L. and Fields, Stanley},
+	year = {1995},
+	pages = {241--263},
+	file = {Bartel and Fields - 1995 - Analyzing protein-protein interactions using two-h.pdf:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/RT3BBIDR/Bartel and Fields - 1995 - Analyzing protein-protein interactions using two-h.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/SXPZSPD7/0076687995540180.html:text/html}
+}
