--- a/introduction.tex
+++ b/introduction.tex
@@ -41,7 +41,7 @@ An alternative to computational prediction for variant assessment is the use of 
 
 Yeast-2-Hybrid (Y2H)~\cite{fields_novel_1989} is a binary protein interaction assay performed within the yeast \species{Saccharomyces cerevisiae} (Figure~\ref{fig:compl_y2h}A). The qualifier `binary' refers to the fact that it detects direct physical associations compared between two individual proteins as opposed to often-indirect associations like co-localization or co-complex-membership. It is based on the reconstitution of two fragments of the transcription factor Gal4. The Gal4 protein is comprised of two domains: A DNA-binding (DB) domain and an activating domain (AD). Both are required for it to successfully associate with its cognate promoter region and induce expression of a reporter gene downstream of the promoter. When two proteins X and Y are fused to the DB and AD domain respectively, a prospective interaction between X and Y leads to the reconstitution of the transcription factor and subsequently to reporter expression. In most cases, the reporter is an auxotrophy marker, such as \gene{HIS3}, thus linking the ability of the two proteins to interact with each other to the ability of the yeast strain to grow on selective (e.g. histidine-deficient) media. When comparing different variants of the same protein interacting with the same partner, reporter expression has even been shown to be proportional to binding affinity~\cite{yang_protein-peptide_1995}. This proportional relationship allows for quantitative interpretation of Y2H results under these specific circumstances. However, this cannot be generalized to compare different proteins.
 
-Y2H does however suffer from a number of drawbacks. Due to the the transcription factor needing to physically associate with DNA, any protein to be examined needs to be able to enter the nucleus and function within. While the DB domain already contains a nuclear localization sequence (NLS), the AD ORF is often the fused with an additional NLS. However, this does not work for every protein~\cite{van_criekinge_yeast_1999}. A particular problem are membrane proteins which generally cannot enter the nucleus at all \todo{REF}. A variant of Y2H, MYTH (Membrane Yeast-Two-Hybrid) exists for these proteins~\cite{snider_split-ubiquitin_2010}. \todo{More about MYTH and MaMTH?}.
+Y2H does however suffer from a number of drawbacks. Due to the the transcription factor needing to physically associate with DNA, any protein to be examined needs to be able to enter the nucleus and function within. While the DB domain already contains a nuclear localization sequence (NLS), the AD ORF is often the fused with an additional NLS. However, this does not work for every protein~\cite{van_criekinge_yeast_1999}. A particular problem are membrane proteins which generally cannot enter the nucleus at all~\cite{bartel_analyzing_1995}. A variant of Y2H, MYTH (Membrane Yeast-Two-Hybrid) exists for these proteins~\cite{stagljar_genetic_1998,iyer_utilizing_2005}. This system relies on the reconstitution of a split ubiquitin through the interaction of membrane proteins. A reconstitution of ubiquitin allows for recognition by deubiquitinases (DUBs), which cleave off a fused transcription factor that activates a reporter gene.
 
 In the past it has often been stated that Y2H results are unreliable and suffer from low precision. One source for these claims goes back to a comparison between two early Y2H screens of the \species{S. cerevisiae} interactome by Ito \etal~\cite{ito_comprehensive_2001} and Uetz \etal~\cite{uetz_comprehensive_2000}, whose maps only overlapped by 19\%. Yu \etal\ later showed that this low overlap was not due to low specificity as previously though, but rather low sensitivity. It has been estimated that Y2H has an overall assay sensitivity of 20\%~\cite{venkatesan_empirical_2009}. That is, only one in five real existing protein interactions can be detected by Y2H. These sensitivity levels are comparable to most other binary interaction assays, such as Protein-fragment Complementation Assays (PCA)~\cite{tarassov_vivo_2008} or the Mammalian Protein-Protein-Interaction Trap (MaPPIT)~\cite{eyckerman_design_2001}.
 %Ito: https://www.ncbi.nlm.nih.gov/pubmed/11283351
