--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,9 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{cite}
+\usepackage[toc,page]{appendix}
 \usepackage[hidelinks]{hyperref}
+
 
 
 \degree{Doctor of Philosophy}
@@ -78,6 +80,8 @@ The author would like to thank Fritz Roth, Atina Cot\'e, Jennifer Knapp, Song Su
 \include{chapter2}
 
 \include{conclusion}
+
+\include{appendix}
 
 %% This adds a line for the Bibliography in the Table of Contents.
 \addcontentsline{toc}{chapter}{Bibliography}
