added appendix maps

--- a/appendix.tex
+++ b/appendix.tex
@@ -15,36 +15,36 @@ As was shown in chapter 3 section~\ref{sec:hypercomp}, phylogenetic analysis of 
 \begin{landscape}
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=9in]{img/sumo-map.pdf}
-	\caption{}
+	\includegraphics[width=9in]{img/sumo1_map_noflip.pdf}
+	\caption{Functional map of SUMO1. From top to bottom: Position-wise evolutionary conservation (AMAS); Secondary structure; Relative solvent accessibility; Relative burial in protein-protein interaction interfaces with SENP proteases, E1 complex, covalent and noncovalent E2 binding, E3s and three different SIM motifs; A summary track showing the relative number of amino acid changes resulting in different fitness effects; and finally the individual amino acid change effects sorted by physicochemical groups.}
 \end{figure}
 \end{landscape}
 
 
-% \begin{landscape}
-% \begin{figure}[h]
-% 	\centering
-% 	\includegraphics[width=9in]{img/tpk1_map.pdf}
-% 	\caption{}
-% \end{figure}
-% \end{landscape}
+\begin{landscape}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=9in]{img/tpk1_map_noflip.pdf}
+	\caption{Functional map of TPK1. From top to bottom: Position-wise evolutionary conservation (AMAS); Secondary structure; Relative solvent accessibility; Relative burial in homodimerization interfaces; Positions contacting the Thiamine pyrophosphate (TPP) molecule; A summary track showing the relative number of amino acid changes resulting in different fitness effects; and finally the individual amino acid change effects sorted by physicochemical groups.}
+\end{figure}
+\end{landscape}
 
 
-% \begin{landscape}
-% \begin{figure}[h]
-% 	\centering
-% 	\includegraphics[width=9in]{img/ncs1_map.pdf}
-% 	\caption{}
-% \end{figure}
-% \end{landscape}
+\begin{landscape}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=9in]{img/ncs1_map_noflip.pdf}
+	\caption{Functional map of NCS1. From top to bottom: Position-wise evolutionary conservation (AMAS); Secondary structure; Relative solvent accessibility; Relative burial in interaction interface with rhodopsin kinase; Positions contacting Calcium ions; A summary track showing the relative number of amino acid changes resulting in different fitness effects; and finally the individual amino acid change effects sorted by physicochemical groups.}
+\end{figure}
+\end{landscape}
 
 
-% \begin{landscape}
-% \begin{figure}[h]
-% 	\centering
-% 	\includegraphics[width=9in]{img/calm1_map.pdf}
-% 	\caption{}
-% \end{figure}
-% \end{landscape}
+\begin{landscape}
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=9in]{img/calm1_map_noflip.pdf}
+	\caption{Functional map of Calmodulin. From top to bottom: Position-wise evolutionary conservation (AMAS); Secondary structure; Relative solvent accessibility; Relative burial in interaction interface with ion channel fragments; Positions contacting Calcium ions; A summary track showing the relative number of amino acid changes resulting in different fitness effects; and finally the individual amino acid change effects sorted by physicochemical groups.}
+\end{figure}
+\end{landscape}
 
 \end{appendices}
