clean up bibtex

--- a/main.tex
+++ b/main.tex
@@ -87,6 +87,6 @@ The author would like to thank Fritz Roth, Atina Cot\'e, Jennifer Knapp, Song Su
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{unsrt}
 {\small
-\bibliography{thesis}
+\bibliography{thesis_ascii}
 }
 \end{document}
